2024-11-09 Philipp Klaus Krause <philipp@colecovision.eu>

	* src/f8/gen.c:
	  Fix generation of invalid asm for bit-field read.

2024-11-08 Benedikt Freisen <b.freisen AT gmx.net>

	* doc/sdccman.lyx,
	  src/SDCC.y,
	  src/SDCCerr.c,
	  src/SDCCerr.h,
	  src/SDCCsymt.c,
	  src/SDCCsymt.h,
	  support/regression/tests/typed-enum.c,
	  support/valdiag/tests/typed-enum.c:
	  Implement C23's explicitly typed enums, see [feature-requests:#847].

2024-11-06 Philipp Klaus Krause <philipp@colecovision.eu>

	* src/SDCCralloc.hpp:
	  Fallback to std::multimap instead of boost::container::flat_multimap for all boost up to 1.85.0.
	* src/SDCCopt.c,
	  support/regression/tests/bug-3780.c:
	  Fix bug #3780.
	* src/SDCCsystem.c:
	  Fix bug #3616 via patch #482 by Janko Stamenović.

2024-11-04 Philipp Klaus Krause <philipp@colecovision.eu>

	* support/cpp/gcc/c-family/c-ppoutput.cc:
	  Fix bug #3794.
	* support/valdiag/tests/bug-3014.c:
	  Adapt test to recent K&R changes.

2024-11-03 Philipp Klaus Krause <philipp@colecovision.eu>

	* support/scripts/sdcc.nsi:
	  Do not try to include XA-51 simulator (which is no longer built by default) in Windows installer.

2024-11-03 Benedikt Freisen <b.freisen AT gmx.net>

	* doc/sdccman.lyx,
	  src/SDCC.y,
	  src/SDCCerr.c,
	  src/SDCCerr.h,
	  src/SDCCsymt.c,
	  src/SDCCsymt.h:
	  Add syntactic support for K&R-style functions.

2024-11-03 Benedikt Freisen <b.freisen AT gmx.net>

	* doc/sdccman.lyx,
	  src/SDCC.y,
	  src/SDCCast.c,
	  src/SDCCerr.c,
	  src/SDCCerr.h,
	  support/regression/tests/generic.c:
	  Add C2y generic selection based on a type name.

2024-11-03 Philipp Klaus Krause <philipp@colecovision.eu>

	* support/regression/tests/bug-3795.c:
	  Add a regression test for a bug encountered in z88dk.

2024-11-03 Benedikt Freisen <b.freisen AT gmx.net>

	* support/regression/cases/Makefile.in:
	  Tidy up list of excluded test cases.

2024-11-01 Philipp Klaus Krause <philipp@colecovision.eu>

	* src/SDCCpeeph.c:
	  Fix bug #3792.